ignore 적용 _20230926_ 김상욱

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.datasource.password=1234
 mybatis.config-location=classpath:/sqlmaps/sql-mapper-config.xml
 mybatis.mapper-locations=classpath:/sqlmaps/**/*_SQL.xml
 mybatis.type-aliases-package=com.**.vo
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
