--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/view
 spring.mvc.view.suffix=.jsp
-spring.mvc.static-path-pattern=/resources/**
+spring.resources.static-locations=classpath:/static/
+#spring.mvc.static-path-pattern=/resources/**
 
 #server.port=9090 
 
 #mysql
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/teambil?characterEncoding=UTF-8&serverTimezone=KST
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/infunsecuritydb?characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Ksw3347!!
 
 #mybatis Settings
 mybatis.config-location=classpath:/sqlmaps/sql-mapper-config.xml
