--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/view
 spring.mvc.view.suffix=.jsp
-spring.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/resources/**
 
 #server.port=9090 
