스프링 시큐리티 로그인 DB 연동 업데이트 _ 2023.10.15 _ 김상욱

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/view
 spring.mvc.view.suffix=.jsp
-spring.web.resources.static-locations=classpath:/static/js/
+spring.web.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/resources/**
 
 #server.port=9090 
