--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.mvc.view.prefix=/WEB-INF/view
-spring.mvc.view.suffix=.jsp
-spring.web.resources.static-locations=classpath:/static/
+#spring.mvc.view.prefix=/WEB-INF/view
+#spring.mvc.view.suffix=.jsp
+#spring.web.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/resources/**
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 
 #server.port=9090 
 
@@ -10,7 +16,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/infunsecuritydb?characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Ksw3347!!
+spring.datasource.password=0000
 
 #mybatis Settings
 mybatis.config-location=classpath:/sqlmaps/sql-mapper-config.xml
